# security_info_bot

./: .dockerignore  .env.example  .gcloudignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-entrypoint.sh  main.py  pyproject.toml
.github/workflows/: cisa_kev.yml  twcert.yml
cisa_kev/2026-05/: cisa_kev_2026-05-01_20260529_083326.json  cisa_kev_2026-05-28_20260529_054906.json  cisa_kev_2026-05-28_20260529_122853.json  cisa_kev_2026-05-29_20260529_054645.json  cisa_kev_2026-05-29_20260530_050047.json  cisa_kev_2026-05-29_20260530_075826.json  cisa_kev_2026-05-29_20260530_144841.json  cisa_kev_2026-05-30_20260531_054607.json  cisa_kev_2026-05-30_20260531_110830.json  cisa_kev_2026-05-30_20260531_145718.json  cisa_kev_2026-05-31_20260601_061933.json  cisa_kev_2026-05-31_20260601_153356.json  cisa_kev_20260528_105632.json
cisa_kev/2026-06/: analysis_cisa_kev_2026-06-01_20260602_060303.json  analysis_cisa_kev_2026-06-01_20260701_062751.json  analysis_cisa_kev_2026-06-01_20260701_122856.json  analysis_cisa_kev_2026-06-02_20260603_061755.json  analysis_cisa_kev_2026-06-03_20260604_060835.json  (+93 more)
docs/: architecture.md  archive-branch.md  cloudrun-deploy.md  configuration.md  deployment-guide.md  deployment.md  error-handling.md
src/: config.py  models.py
src/sinks/: drive.py  (+3 more)
tests/: test_cisa_kev_fetcher.py  test_config_emails.py  test_email_render.py  test_email_send.py  test_ioc_parser.py  test_publish_scan.py  test_sa_creds.py  test_sheet_writeback.py  test_storage.py  test_twcert_since.py  test_twcert_staleness.py
twcert/: _fetch_state.json
(+144 files in other folders)
