[project]
name = "security-info-bot"
version = "0.1.0"
description = "TWCERT/CC 企業情資自動化處理系統"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.0.0",
    "gspread>=6.0.0",
    "google-auth>=2.0.0",
    "google-api-python-client>=2.0.0",
    "requests>=2.31.0",
    "openpyxl>=3.1.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0",
]

[project.scripts]
security-info-bot = "main:main"

[dependency-groups]
dev = [
    "pre-commit>=4.0.0",
    "pytest>=8.0.0",
    "ruff>=0.9.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B"]
"src/analyzer/prompt.py" = ["E501"]
